--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,7 +35,7 @@
      <li class="list  l4" id="list">do nothing</li>
      <li class="list  l5" id="list">just chill</li>
      <li class="list  l6 "id="list">
-       <a href="/index.html" >About me</a>
+       <a href="https://github.com/vishalparmar3542" >About me</a>
       </li>
       <div>
     
